fixed text alignment

--- a/app.css
+++ b/app.css
@@ -24,6 +24,14 @@ input[type='submit'] {
 
 }
 
+#final-meme {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-content: space-between;
+    row-gap: 25px;
+}
+
 #generated {
     position: relative;
     max-width: 300px;
@@ -43,9 +51,9 @@ input[type='submit'] {
 
 #generated .topTxt {
     position: absolute;
-    max-width: 300px;
-    max-height: 300px;
-    /* left: 150px; */
+
+    width: 300px;
+    left: 0%;
 
 
     font-family: Impact, 'Arial Narrow Bold', sans-serif;
@@ -60,13 +68,14 @@ input[type='submit'] {
 
 #generated .btmTxt {
     position: absolute;
-    left: 50%;
+    width: 300px;
+    left: 0%;
     bottom: 0%;
 
 
     font-family: Impact, 'Arial Narrow Bold', sans-serif;
     font-size: 1.5em;
-    /* text-align: center; */
+    text-align: center;
 
     color: white;
 
